# sageturner

./: Cargo.toml  README.md
examples/CLIP/: Dockerfile  config.yaml  sageturner.yaml  serve.py  wire.yaml
examples/CLIP/generate-container/: sageturner.py
examples/CLIP/provided-container/: Dockerfile  serve.py
examples/mnist/: Dockerfile
examples/resnet-50/: README.md  sageturner.yaml
examples/resnet-50/generate-container/: sageturner.py
examples/resnet-50/provided-container/: Dockerfile  serve.py
src/: aws.rs  docker.rs  main.rs  model_config.rs  pyserve.rs
