[package]
name = "sageturner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argh = "0.1.13"
aws-config = "1.5.16"
aws-sdk-ecr = "1.65.0"
aws-sdk-iam = "1.62.0"
aws-sdk-s3 = "1.76.0"
aws-sdk-sagemaker = "1.101.0"
base64 = "0.22.1"
bollard = "0.18.1"
chrono = "0.4.39"
futures-util = "0.3.31"
serde = {version="1.0.217", features=["derive"]}
serde_yaml = "0.9.34"
tar = "0.4.43"
tempfile = "3.16.0"
tokio = { version = "1.43.0", features = ["full"] }
